# photo-studio

./: README.md  pyproject.toml
app/: client.py  image_storage.py  main.py  settings.py
ops/: deploy.sh
