[tool.poetry]
name = "photo-studio"
version = "0.1.0"
description = ""
authors = ["FKgk <rhkd865@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.27.2"
boto3 = "^1.28.68"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
